--- a/react-aula/estudo-web3/src/index.css
+++ b/react-aula/estudo-web3/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+  color: white;
+  min-height: 100vh;
+  background-image: url("../public/bg.png");
+  place-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo {
+    width: 100%;
+
+}
+.centralizarSegundaColuna{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.centralizaIconesUmDoLadoDoOutro{
+  display: flex;
+  gap: 1em;
+  
 }
