--- a/aula3107/atividade/src/index.css
+++ b/aula3107/atividade/src/index.css
@@ -7,6 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.bordaPreta{
+  border: 1px solid black;
+  padding: 1em;
+  flex-wrap:wrap;
+  width: auto!important;
+  height: 100%!important;
+}
+
+h1{
+  text-align: center;
+  justify-content: space-evenly;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -18,5 +30,5 @@ main{
   background-color: #f0f0f0;
 }
 .logo{
-  max-width: 100vw;
+  max-width: 95vw;
 }
